Fix navigation screen collapsing regression. (#31228)

--- a/packages/edit-navigation/src/components/editor/style.scss
+++ b/packages/edit-navigation/src/components/editor/style.scss
@@ -48,6 +48,7 @@
 
 			// Menu items.
 			.wp-block-navigation-link__content {
+				padding: 0.5em 1em;
 				margin-bottom: 6px;
 				border-radius: $radius-block-ui;
 
